--- a/translations/nb.json
+++ b/translations/nb.json
@@ -1,10 +1,10 @@
 {
-    "TITLE": "Magic Mirror Meny",
+    "TITLE": "MagicMirror² Meny",
 
     "EDIT_MENU_NAME": "Rediger visning",
     "SHUTDOWN_MENU_NAME": "Strøm",
     "CONFIGURE_MENU_NAME": "Rediger config.js",
-    "VIEW_MIRROR": "MagicMirror<sup>2</sup>",
+    "VIEW_MIRROR": "MagicMirror²",
 
     "BACK": "Tilbake",
 
@@ -15,7 +15,7 @@
     "MONITORON": "Slå på skjermen",
     "MONITORTIMED": "Slå skjermen på kort",
     "RESTART": "Omstart",
-    "RESTARTMM": "Restart MagicMirror<sup>2</sup>",
+    "RESTARTMM": "Restart MagicMirror²",
     "SHUTDOWN": "Slå av",
 
     "SHOWALL": "Alle",
@@ -63,7 +63,7 @@
     "FORCE_SHOW": "Gjør det likevel.",
 
 	"UPDATE_MENU_NAME" : "Oppdateringer",
-	"UPDATEMM" : "Oppdater MagicMirror<sup>2</sup>",
+	"UPDATEMM" : "Oppdater MagicMirror²",
     "UPDATE_AVAILABLE" : "Oppdatering tilgjengelig",
 
 	"ALERT_MENU_NAME" : "Varsling",
