--- a/translations/zh-cn.json
+++ b/translations/zh-cn.json
@@ -1,10 +1,10 @@
 {
-    "TITLE": "Magic Mirror Menu 魔镜菜单",
+    "TITLE": "MagicMirror² Menu 魔镜菜单",
 
     "EDIT_MENU_NAME": "编辑界面",
     "SHUTDOWN_MENU_NAME": "电源",
     "CONFIGURE_MENU_NAME": "编辑 config.js",
-    "VIEW_MIRROR": "MagicMirror<sup>2</sup>",
+    "VIEW_MIRROR": "MagicMirror²",
 
     "BACK": "返回",
 
@@ -15,7 +15,7 @@
     "MONITORON": "打开显示器",
     "MONITORTIMED": "短暂打开显示器",
     "RESTART": "重启",
-    "RESTARTMM": "重启 MagicMirror<sup>2</sup>",
+    "RESTARTMM": "重启 MagicMirror²",
     "SHUTDOWN": "关闭",
     "FULLSCREEN": "切换全屏",
     "MINIMIZE": "最小化魔镜",
@@ -66,7 +66,7 @@
     "FORCE_SHOW": "继续.",
 
 	"UPDATE_MENU_NAME" : "更新",
-	"UPDATEMM" : "更新 MagicMirror<sup>2</sup>",
+	"UPDATEMM" : "更新 MagicMirror²",
     "UPDATE_AVAILABLE" : "更新可用",
 
 	"ALERT_MENU_NAME" : "通知",
@@ -82,7 +82,7 @@
     "FORM_SECONDS" : "显示时长(秒):",
 
 
-    "RESPONSE_ERROR": "操作失败. 查看 MagicMirror<sup>2</sup> 日志获取更多信息",
+    "RESPONSE_ERROR": "操作失败. 查看 MagicMirror² 日志获取更多信息",
     "MODULE_CONTROLS": "模块控制",
     "CUSTOM_MENU": "自定义菜单"
 }
