--- a/translations/en.json
+++ b/translations/en.json
@@ -1,10 +1,10 @@
 {
-    "TITLE": "Magic Mirror Menu",
+    "TITLE": "MagicMirror² Menu",
 
     "EDIT_MENU_NAME": "Edit view",
     "SHUTDOWN_MENU_NAME": "Power",
     "CONFIGURE_MENU_NAME": "Edit config.js",
-    "VIEW_MIRROR": "MagicMirror<sup>2</sup>",
+    "VIEW_MIRROR": "MagicMirror²",
 
     "BACK": "Back",
 
@@ -15,7 +15,7 @@
     "MONITORON": "Turn monitor ON",
     "MONITORTIMED": "Turn monitor ON briefly",
     "RESTART": "Restart",
-    "RESTARTMM": "Restart MagicMirror<sup>2</sup>",
+    "RESTARTMM": "Restart MagicMirror²",
     "SHUTDOWN": "Shutdown",
     "FULLSCREEN": "Toggle Fullscreen",
     "MINIMIZE": "Minimize Browser",
@@ -66,7 +66,7 @@
     "FORCE_SHOW": "Do it anyway.",
 
 	"UPDATE_MENU_NAME" : "Updates",
-	"UPDATEMM" : "Update MagicMirror<sup>2</sup>",
+	"UPDATEMM" : "Update MagicMirror²",
     "UPDATE_AVAILABLE" : "Update available",
 
 	"ALERT_MENU_NAME" : "Alert",
