--- a/translations/id.json
+++ b/translations/id.json
@@ -1,10 +1,10 @@
 {
-    "TITLE": "Menu Magic Mirror",
+    "TITLE": "Menu MagicMirror²",
 
     "EDIT_MENU_NAME": "Sunting tampilan",
     "SHUTDOWN_MENU_NAME": "Power",
     "CONFIGURE_MENU_NAME": "Sunting config.js",
-    "VIEW_MIRROR": "MagicMirror<sup>2</sup>",
+    "VIEW_MIRROR": "MagicMirror²",
 
     "BACK": "Kembali",
 
@@ -15,7 +15,7 @@
     "MONITORON": "Nyalakan monitor",
     "MONITORTIMED": "Nyalakan monitor sebentar",
     "RESTART": "Restart",
-    "RESTARTMM": "Restart MagicMirror<sup>2</sup>",
+    "RESTARTMM": "Restart MagicMirror²",
     "SHUTDOWN": "Matikan",
 
     "SHOWALL": "Semua",
@@ -60,7 +60,7 @@
     "LOADING": "Memuat &hellip;",
 
 	"UPDATE_MENU_NAME" : "Pembaharuan",
-	"UPDATEMM" : "Perbarui MagicMirror<sup>2</sup>",
+	"UPDATEMM" : "Perbarui MagicMirror²",
     "UPDATE_AVAILABLE" : "Pembaharuan tersedia",
 
 	"ALERT_MENU_NAME" : "Peringatan",
