--- a/translations/en.json
+++ b/translations/en.json
@@ -25,10 +25,10 @@
     "HIDEALL": "All",
 
     "ADD_MODULE": "Add module",
-    "SEARCH": "Search &hellip;",
+    "SEARCH": "Search …",
     "INSTALLED": "Installed",
     "DOWNLOAD": "Download",
-    "DOWNLOADING": "Downloading &hellip;",
+    "DOWNLOADING": "Downloading …",
     "CODE_LINK": "View code",
     "BY": "by",
     "ADD_THIS": "Add this module",
@@ -60,7 +60,7 @@
 
     "DONE": "Done.",
     "ERROR": "Error!",
-    "LOADING": "Loading &hellip;",
+    "LOADING": "Loading …",
 
     "LOCKSTRING_WARNING": "This module was hidden by LIST_OF_MODULES, it can not be shown.",
     "FORCE_SHOW": "Do it anyway.",
