--- a/translations/es.json
+++ b/translations/es.json
@@ -25,10 +25,10 @@
     "HIDEALL": "Ocultar Todos",
 
     "ADD_MODULE": "Añadir módulo",
-    "SEARCH": "Buscar &hellip;",
+    "SEARCH": "Buscar …",
     "INSTALLED": "Instalado",
     "DOWNLOAD": "Descarga",
-    "DOWNLOADING": "Descargando &hellip;",
+    "DOWNLOADING": "Descargando …",
     "CODE_LINK": "Ver código",
     "BY": "por",
     "ADD_THIS": "Añadir este módulo",
@@ -60,7 +60,7 @@
 
     "DONE": "Hecho.",
     "ERROR": "Error!",
-    "LOADING": "Cargando &hellip;",
+    "LOADING": "Cargando …",
 
     "LOCKSTRING_WARNING": "Este módulo fué ocultado por LIST_OF_MODULES, no puede ser mostrado.",
     "FORCE_SHOW": "Hazlo igualmente.",
