--- a/translations/zh-cn.json
+++ b/translations/zh-cn.json
@@ -25,10 +25,10 @@
     "HIDEALL": "关闭全部",
 
     "ADD_MODULE": "添加模块",
-    "SEARCH": "搜索 &hellip;",
+    "SEARCH": "搜索 …",
     "INSTALLED": "安装",
     "DOWNLOAD": "下载",
-    "DOWNLOADING": "下载中 &hellip;",
+    "DOWNLOADING": "下载中 …",
     "CODE_LINK": "查看代码",
     "BY": "by",
     "ADD_THIS": "添加此模块",
@@ -60,7 +60,7 @@
 
     "DONE": "完成.",
     "ERROR": "错误!",
-    "LOADING": "加载中 &hellip;",
+    "LOADING": "加载中 …",
 
     "LOCKSTRING_WARNING": "This module was hidden by LIST_OF_MODULES, it can not be shown.",
     "FORCE_SHOW": "继续.",
