feat: improve notification UX and PM2 error handling

--- a/translations/de.json
+++ b/translations/de.json
@@ -60,6 +60,7 @@
 
   "DONE": "Fertig.",
   "ERROR": "Fehler!",
+  "INFO": "Info",
   "LOADING": "Lade …",
 
   "LOCKSTRING_WARNING": "Dieses Modul wurde durch LIST_OF_MODULES versteckt, es kann nicht angezeigt werden.",
