refactor(remote): comprehensive UI/UX modernization and code quality improvements
Features & UX:
- Add Links subpage with API Docs, Website, Forum, Repository links (i18n support)
- Implement dynamic header titles per menu with proper reload handling
- Convert settings warning dialog to subtle banner on settings page
- Add Links feature with strict translation key integration across 13 locales

Layout & Responsiveness:
- Modernize remote.html with semantic HTML structure and improved accessibility
- Responsive module update containers and button layouts

Code Quality (JavaScript):
- Replace 'const self = this' pattern with arrow functions throughout
- Extract menu title mappings into dedicated getMenuTitleKey() method
- Reduce console.log to only essential error/critical logging
- Clean up unnecessary self references, use direct 'this' binding
- Modernize async/await patterns

HTML/CSS Standards:
- Remove deprecated size="10" HTML attribute from search input
- Use CSS width property (10ch) for semantic styling instead

i18n:
- Simplify TITLE from menu-specific variants to "MagicMirror²"
- Add translation keys: LINKS, API_DOCS, FORUM, REPOSITORY, WEBSITE

--- a/translations/ca.json
+++ b/translations/ca.json
@@ -1,10 +1,15 @@
 {
-  "TITLE": "Menú MagicMirror²",
+  "TITLE": "MagicMirror²",
 
   "EDIT_MENU_NAME": "Editar Vista",
   "SHUTDOWN_MENU_NAME": "Encendre/Apagar",
   "CONFIGURE_MENU_NAME": "Editar config.js",
   "VIEW_MIRROR": "MagicMirror²",
+  "LINKS": "Enllaços",
+  "API_DOCS": "Documentació de l'API",
+  "WEBSITE": "Lloc web",
+  "FORUM": "Fòrum",
+  "REPOSITORY": "Repositori",
 
   "BACK": "Endarrera",
 
@@ -23,6 +28,7 @@
 
   "SHOWALL": "Mostrar Tots",
   "HIDEALL": "Amagar Tots",
+  "RESTORE": "Restaurar",
 
   "ADD_MODULE": "Afegir mòdul",
   "SEARCH": "Buscar …",
@@ -48,7 +54,7 @@
   "NO_MODULES_LOADED": "No hi han móduls carregats.",
   "SAVE": "Guardar",
 
-  "EXPERIMENTAL": "Aquesta es una funciò experimental, pot corrompre el teu arxiu config. Fes còpia de seguretat primer, per si de cas!<br>Vols continuar?",
+  "EXPERIMENTAL": "Aquesta es una funciò experimental, pot corrompre el teu arxiu config. Fes còpia de seguretat primer, per si de cas!",
   "PANIC": "No m'importa.",
   "NO_RISK_NO_FUN": "Qui no arrisca no pisca!",
 
