refactor(translations): rename "delete" action to "remove" and optimize styles

--- a/translations/ca.json
+++ b/translations/ca.json
@@ -45,7 +45,8 @@
   "NO_POSITION": "(invisible)",
   "ADD_ENTRY": "Afegir entrada",
   "NEW_ENTRY_NAME": "(nom de la nova entrada)",
-  "DELETE_ENTRY": "Esborrar",
+  "EDIT": "Editar",
+  "REMOVE": "Eliminar",
   "UNSAVED_CHANGES": "Canvis sense guardar",
   "OK": "Ok",
   "DISCARD": "Descartar canvis",
