--- a/translations/da.json
+++ b/translations/da.json
@@ -45,7 +45,8 @@
   "NO_POSITION": "(usynlig)",
   "ADD_ENTRY": "Tilføj post",
   "NEW_ENTRY_NAME": "(skriv navn på ny post)",
-  "DELETE_ENTRY": "Slet",
+  "EDIT": "Rediger",
+  "REMOVE": "Fjern",
   "UNSAVED_CHANGES": "Ikke-gemte ændringer",
   "OK": "Ok",
   "DISCARD": "Forkast ændringer",
