--- a/translations/de.json
+++ b/translations/de.json
@@ -1,7 +1,7 @@
 {
   "TITLE": "MagicMirror²",
 
-  "EDIT_MENU_NAME": "Ansicht editieren",
+  "EDIT_MENU_NAME": "Ansicht bearbeiten",
   "SHUTDOWN_MENU_NAME": "Energieoptionen",
   "CONFIGURE_MENU_NAME": "Einstellungen",
   "VIEW_MIRROR": "MagicMirror²",
@@ -40,12 +40,13 @@
   "ADD_THIS": "Hinzufügen",
   "HELP": "Hilfe",
   "MENU": "Menü",
-  "RESET": "Reset",
+  "RESET": "Zurücksetzen",
   "NO_HEADER": "(kein Header)",
   "NO_POSITION": "(unsichtbar)",
   "ADD_ENTRY": "Neuer Eintrag",
   "NEW_ENTRY_NAME": "(Name eintragen)",
-  "DELETE_ENTRY": "Löschen",
+  "EDIT": "Bearbeiten",
+  "REMOVE": "Entfernen",
   "UNSAVED_CHANGES": "Nicht gespeicherte Änderungen",
   "OK": "Ok",
   "DISCARD": "Verwerfen",
