--- a/translations/en.json
+++ b/translations/en.json
@@ -45,7 +45,8 @@
   "NO_POSITION": "(invisible)",
   "ADD_ENTRY": "Add entry",
   "NEW_ENTRY_NAME": "(enter name of new entry)",
-  "DELETE_ENTRY": "Delete",
+  "EDIT": "Edit",
+  "REMOVE": "Remove",
   "UNSAVED_CHANGES": "Unsaved changes",
   "OK": "Ok",
   "DISCARD": "Discard changes",
