--- a/translations/es.json
+++ b/translations/es.json
@@ -45,7 +45,8 @@
   "NO_POSITION": "(invisible)",
   "ADD_ENTRY": "Añadir entrada",
   "NEW_ENTRY_NAME": "(nombre de la nueva entrada)",
-  "DELETE_ENTRY": "Borrar",
+  "EDIT": "Editar",
+  "REMOVE": "Eliminar",
   "UNSAVED_CHANGES": "Cambios sin guardar",
   "OK": "Ok",
   "DISCARD": "Descartar cambios",
