--- a/translations/fr.json
+++ b/translations/fr.json
@@ -42,7 +42,8 @@
   "NO_POSITION": "(invisible)",
   "ADD_ENTRY": "Ajouter une entrée",
   "NEW_ENTRY_NAME": "Entrer le nom",
-  "DELETE_ENTRY": "Supprimer",
+  "EDIT": "Éditer",
+  "REMOVE": "Supprimer",
   "UNSAVED_CHANGES": "Changements non sauvegardés",
   "OK": "Ok",
   "DISCARD": "Ignorer les changements",
