--- a/translations/id.json
+++ b/translations/id.json
@@ -42,7 +42,8 @@
   "NO_POSITION": "(tersembunyi)",
   "ADD_ENTRY": "Tambah entri",
   "NEW_ENTRY_NAME": "(masukkan nama entri baru)",
-  "DELETE_ENTRY": "Hapus",
+  "EDIT": "Sunting",
+  "REMOVE": "Hapus",
   "UNSAVED_CHANGES": "Perubahan tidak tersimpan",
   "OK": "Ok",
   "DISCARD": "Abaikan perubahan",
