--- a/translations/it.json
+++ b/translations/it.json
@@ -41,7 +41,8 @@
   "NO_POSITION": "(invisibile)",
   "ADD_ENTRY": "Aggiungi voce",
   "NEW_ENTRY_NAME": "(inserisci il nome della nuova voce)",
-  "DELETE_ENTRY": "Elimina",
+  "EDIT": "Modifica",
+  "REMOVE": "Rimuovi",
   "UNSAVED_CHANGES": "Modifiche non salvate",
   "OK": "Ok",
   "DISCARD": "Annulla modifiche",
