--- a/translations/nb.json
+++ b/translations/nb.json
@@ -42,7 +42,8 @@
   "NO_POSITION": "(usynlig)",
   "ADD_ENTRY": "Legg til oppføring",
   "NEW_ENTRY_NAME": "(skriv inn navn på ny oppføring)",
-  "DELETE_ENTRY": "Slett",
+  "EDIT": "Rediger",
+  "REMOVE": "Fjern",
   "UNSAVED_CHANGES": "Ulagrede endringer",
   "OK": "Ok",
   "DISCARD": "Forkaste endringer",
