--- a/translations/pt.json
+++ b/translations/pt.json
@@ -42,7 +42,8 @@
   "NO_POSITION": "(invisível)",
   "ADD_ENTRY": "Adicionar entrada",
   "NEW_ENTRY_NAME": "(inserir nome da nova entrada)",
-  "DELETE_ENTRY": "Eliminar",
+  "EDIT": "Editar",
+  "REMOVE": "Remover",
   "UNSAVED_CHANGES": "Alterações não guardadas",
   "OK": "Ok",
   "DISCARD": "Cancelar alterações",
