--- a/translations/sv.json
+++ b/translations/sv.json
@@ -42,7 +42,8 @@
   "NO_POSITION": "(osynlig)",
   "ADD_ENTRY": "Lägg till värde",
   "NEW_ENTRY_NAME": "(Skriv ett namn på värdet)",
-  "DELETE_ENTRY": "Tabort",
+  "EDIT": "Redigera",
+  "REMOVE": "Ta bort",
   "UNSAVED_CHANGES": "Osparade ändringar",
   "OK": "Ok",
   "DISCARD": "Spara inte ändringar",
