--- a/translations/tr.json
+++ b/translations/tr.json
@@ -45,7 +45,8 @@
   "NO_POSITION": "(görünmez)",
   "ADD_ENTRY": "Giriş Ekle",
   "NEW_ENTRY_NAME": "(ismini yazın)",
-  "DELETE_ENTRY": "Sil",
+  "EDIT": "Düzenle",
+  "REMOVE": "Kaldır",
   "UNSAVED_CHANGES": "Kaydedilmemiş Değişiklikler",
   "OK": "Tama",
   "DISCARD": "Değişikliklerden Vazgeç",
