--- a/translations/zh-cn.json
+++ b/translations/zh-cn.json
@@ -45,7 +45,8 @@
   "NO_POSITION": "(隐藏)",
   "ADD_ENTRY": "添加配置项",
   "NEW_ENTRY_NAME": "(添加配置项字段名)",
-  "DELETE_ENTRY": "删除",
+  "EDIT": "编辑",
+  "REMOVE": "移除",
   "UNSAVED_CHANGES": "未保存更新",
   "OK": "Ok",
   "DISCARD": "放弃更改",
