--- a/translations/nl.json
+++ b/translations/nl.json
@@ -42,7 +42,8 @@
   "NO_POSITION": "(onzichtbaar)",
   "ADD_ENTRY": "Nieuwe toevoeging",
   "NEW_ENTRY_NAME": "(voor naam in van nieuwe toevoeging)",
-  "DELETE_ENTRY": "Verwijder",
+  "EDIT": "Bewerken",
+  "REMOVE": "Verwijderen",
   "UNSAVED_CHANGES": "Onopgeslagen wijzigingen",
   "OK": "Ok",
   "DISCARD": "Wijzigingen ongedaan maken",
